--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
           <div class="card-white">
             <img src="images/bencic.avif" alt="Bencif" height="140">
             <h2>Semaine de rêve pour Krejcikova, Medvedev sur sa lancée</h2>
-            <p>Retour sur une nouvelle très belle moisson de titres sur les circuits WTA et ATP</p>
+            <p>Retour sur une nouvelle très belle moisson de titres sur les circuits WTA et ATP...</p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card-white">
             <img src="images/daria.avif" alt="Daria" height="140">
             <h2>ITW Daria Kasatkina : "Faire mieux dans les grands rendez-vous"</h2>
-            <p>La demi-finaliste de la dernière édition de Roland-Garros est en quête de constance dans les</p>
+            <p>La demi-finaliste de la dernière édition de Roland-Garros est en quête de constance dans les...</p>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-lg-4">
           <div class="card-white">
             <img src="images/swiatek.avif" alt="Swiatek" height="140">
             <h2>Swiatek intouchable, retour gagnant pour Alcaraz</h2>
-            <p>Retour sur une semaine particulièrement réussie pour la Polonaise et le Murcien, qui ouvrent leur</p>
+            <p>Retour sur une semaine particulièrement réussie pour la Polonaise et le Murcien, qui ouvrent leur...</p>
           </div>
         </div>
       </div>
